[package]
name = "devon"
version = "0.1.0"
edition = "2021"
authors = ["elbaro <elbaro@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.3"
crossterm = "0.22.1"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
